alignment fix

--- a/style.css
+++ b/style.css
@@ -222,8 +222,8 @@
     display: flex;
     height: auto;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
+    justify-content: start;
     overflow: scroll;
     box-sizing: border-box;
 }
